--- a/jobs/index.html
+++ b/jobs/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="BuildZoom (YC W13) – hiring for a new team;junior sales/ops talent. Rescale Is Hiring Senior Back End Engineers in San Francisco. Streak Is Hiring Back End Engineers in  SF (YC S11). Make School Is Hiring a Senior Front-End Engineer. Solution Architect opening at OneSignal. Amplemarket (YC W14) Seeks Software Engineer in Lisbon, Portugal">
+    <meta name="Description" CONTENT="BuildZoom (YC W13) is hiring for a new team: junior sales/ops talent. Rescale Is Hiring Senior Back End Engineers in San Francisco. Streak Is Hiring Back End Engineers in  SF (YC S11). Make School Is Hiring a Senior Front-End Engineer. Solution Architect opening at OneSignal. Amplemarket (YC W14) Seeks Software Engineer in Lisbon, Portugal">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://news.ycombinator.com/item?id=17947770 " rel="nofollow">BuildZoom (YC W13) – hiring for a new team;junior sales/ops talent</a>
+                                    <a href=" https://news.ycombinator.com/item?id=17947770 " rel="nofollow">BuildZoom (YC W13) is hiring for a new team: junior sales/ops talent</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536532220" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536532825" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
