--- a/top-stories/daily/page5.html
+++ b/top-stories/daily/page5.html
@@ -318,7 +318,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17945004">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=zby">zby</a></strong> &nbsp;•&nbsp;
@@ -578,7 +578,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536532825" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536533429" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
