--- a/top-questions-and-answers/index.html
+++ b/top-questions-and-answers/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="What is your preferred weather website?. I screwed up and am struggling. What would you do?. What is the best movie you have seen about AI?. How to transition from academic programming to software engineering?. How do I become a self-taught software engineer in 1 year (full focus)?. Solutions for collaborative code review / pair programming">
+    <meta name="Description" CONTENT="What is your preferred weather website?. I screwed up and am struggling. What would you do?. What is the best movie you have seen about AI?. How to transition from academic programming to software engineering?. How do I become a self-taught software engineer in 1 year (full focus)?. Solutions for collaborative code review, pair programming?">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -263,7 +263,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://news.ycombinator.com/item?id=17950771 " rel="nofollow">Solutions for collaborative code review / pair programming</a>
+                                    <a href=" https://news.ycombinator.com/item?id=17950771 " rel="nofollow">Solutions for collaborative code review, pair programming?</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -276,7 +276,7 @@
                                             href="https://news.ycombinator.com/user?id=deepakkarki">deepakkarki</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1536575890"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    29 points
+                                    30 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536635427" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536636028" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
