--- a/jobs/index.html
+++ b/jobs/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="Fond Is Hiring Business Development Representative in Portland. Lumi (YC W15) Hiring VP Engineering to Build AWS for Manufacturing (Remote/LA). Starsky Robotics Is Hiring a VP-Engineering, Sr Controls, Sr SWEs, and Others. BuildZoom (YC W13) is hiring for a new team: junior sales/ops talent. Rescale Is Hiring Senior Back End Engineers in San Francisco. Streak Is Hiring Back End Engineers in  SF (YC S11)">
+    <meta name="Description" CONTENT="Fond (YC W12) Is Hiring Business Development Representative in Portland. Lumi (YC W15) Hiring VP Engineering to Build AWS for Manufacturing (Remote/LA). Starsky Robotics Is Hiring a VP-Engineering, Sr Controls, Sr SWEs, and Others. BuildZoom (YC W13) is hiring for a new team: junior sales/ops talent. Rescale Is Hiring Senior Back End Engineers in San Francisco. Streak Is Hiring Back End Engineers in  SF (YC S11)">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://jobs.lever.co/fond/bfdf3166-c4b3-4003-98e0-971549568893 " rel="nofollow">Fond Is Hiring Business Development Representative in Portland</a>
+                                    <a href=" https://jobs.lever.co/fond/bfdf3166-c4b3-4003-98e0-971549568893 " rel="nofollow">Fond (YC W12) Is Hiring Business Development Representative in Portland</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536648030" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536648631" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
