--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -426,13 +426,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17970080">
                                         
-                                            comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=red93">red93</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1536767793"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    7 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536835828" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536836444" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
