--- a/top-product-shows/page3.html
+++ b/top-product-shows/page3.html
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://github.com/prkumar/uplink " rel="nofollow">Uplink – Build Reusable Objects for Consuming Web APIs</a>
+                                    <a href=" https://uplink.readthedocs.io/ " rel="nofollow">Uplink – Build Reusable Objects for Consuming Web APIs</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -556,7 +556,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536903631" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536904243" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
