--- a/top-stories/halfweek/page2.html
+++ b/top-stories/halfweek/page2.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="FrontPage 98: Elegant and Exquisite (1997). Using Rust for Game Development [video]. Federal chokehold on marijuana stymies studies on epilepsy, autism. Google remotely activated battery saving mode on multiple people's phones today. PostgreSQL 11 and Just in Time Compilation of Queries. $250 Trillion in Debt: The World’s Post-Lehman Legacy">
+    <meta name="Description" CONTENT="FrontPage 98: Elegant and Exquisite (1997). Using Rust for Game Development [video]. Federal chokehold on marijuana stymies studies on epilepsy, autism. Google activated battery saving mode on multiple phones, then rolled it back. PostgreSQL 11 and Just in Time Compilation of Queries. $250 Trillion in Debt: The World’s Post-Lehman Legacy">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -233,7 +233,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://www.reddit.com/r/GooglePixel/comments/9fkrvw/is_anyone_elses_power_saving_mode_turning_itself/e5xl907/ " rel="nofollow">Google remotely activated battery saving mode on multiple people's phones today</a>
+                                    <a href=" https://www.reddit.com/r/GooglePixel/comments/9fkrvw/is_anyone_elses_power_saving_mode_turning_itself/e5xl907/ " rel="nofollow">Google activated battery saving mode on multiple phones, then rolled it back</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -454,7 +454,7 @@
                                             href="https://news.ycombinator.com/user?id=jxub">jxub</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1536864832"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    175 points
+                                    178 points
                                 </span>
                             </td>
                         </tr>
@@ -578,7 +578,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536928834" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536929444" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
