--- a/top-stories/week/page4.html
+++ b/top-stories/week/page4.html
@@ -467,7 +467,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://www.reddit.com/r/GooglePixel/comments/9fkrvw/is_anyone_elses_power_saving_mode_turning_itself/e5xl907/ " rel="nofollow">Google remotely activated battery saving mode on multiple people's phones today</a>
+                                    <a href=" https://www.reddit.com/r/GooglePixel/comments/9fkrvw/is_anyone_elses_power_saving_mode_turning_itself/e5xl907/ " rel="nofollow">Google activated battery saving mode on multiple phones, then rolled it back</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -578,7 +578,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536928834" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536929444" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
