--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -172,7 +172,7 @@
                                             href="https://news.ycombinator.com/user?id=yaj54">yaj54</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1536941854"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    368 points
+                                    372 points
                                 </span>
                             </td>
                         </tr>
@@ -192,13 +192,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17993312">
                                         
-                                            comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kkm">kkm</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1536994084"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    3 points
+                                    4 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536997230" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536997827" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
