--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -146,7 +146,7 @@
                                             href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1537012487"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    496 points
+                                    497 points
                                 </span>
                             </td>
                         </tr>
@@ -296,13 +296,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17997475">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=alnis">alnis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1537076257"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    7 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1537103439" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1537104035" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
