--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -140,13 +140,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=18013320">
                                         
-                                            comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=eboado">eboado</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1537256636"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    2 points
+                                    3 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1537258240" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1537258841" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
