--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -140,13 +140,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=18029078">
                                         
-                                            comments
+                                            10 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=d4l3k">d4l3k</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1537407214"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    32 points
+                                    54 points
                                 </span>
                             </td>
                         </tr>
@@ -250,7 +250,7 @@
                                             href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1537012487"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    649 points
+                                    658 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1537410042" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1537410633" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
