--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -218,13 +218,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=18049100">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tamlok">tamlok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1537670500"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    13 points
+                                    17 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1537692054" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1537692650" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
