--- a/top-questions-and-answers/page1.html
+++ b/top-questions-and-answers/page1.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="Google repeatedly thinks I'm a robot. How much did you, as an employee, make when your startup exited?. I'm not motivated enough to take privacy seriously. What's a good “History of Technology” book. Which startup offer would you take?. What's the mission of your company and why does it matter?">
+    <meta name="Description" CONTENT="Google repeatedly thinks I'm a robot. How much did you, as an employee, make when your startup exited?. I'm not motivated enough to take privacy seriously. What's a good history of technology book?. Which startup offer would you take?. What's the mission of your company and why does it matter?">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -211,7 +211,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://news.ycombinator.com/item?id=18083620 " rel="nofollow">What's a good “History of Technology” book</a>
+                                    <a href=" https://news.ycombinator.com/item?id=18083620 " rel="nofollow">What's a good history of technology book?</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -224,7 +224,7 @@
                                             href="https://news.ycombinator.com/user?id=ThomPete">ThomPete</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1538049418"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    11 points
+                                    16 points
                                 </span>
                             </td>
                         </tr>
@@ -556,7 +556,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1538105444" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1538106048" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
