--- a/top-stories/week/page1.html
+++ b/top-stories/week/page1.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="WhatsApp Cofounder Brian Acton on Why He Left $850M Behind. What Is This Thing: Found Hooked Up to My Router. How to Build a Low-Tech Website. Instagram’s CEO. Stripe Is Now a $20B Company. Google Suppresses Memo Revealing Plans to Closely Track Search Users in China">
+    <meta name="Description" CONTENT="WhatsApp Cofounder Brian Acton on Why He Left $850M Behind. Found hooked up to my router. How to Build a Low-Tech Website. Instagram’s CEO. Stripe Is Now a $20B Company. Google Suppresses Memo Revealing Plans to Closely Track Search Users in China">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -181,7 +181,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://www.reddit.com/r/whatisthisthing/comments/9ixdh9/found_hooked_up_to_my_router/e6nh61r/ " rel="nofollow">What Is This Thing: Found Hooked Up to My Router</a>
+                                    <a href=" https://www.reddit.com/r/whatisthisthing/comments/9ixdh9/found_hooked_up_to_my_router/e6nh61r/ " rel="nofollow">Found hooked up to my router</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -194,7 +194,7 @@
                                             href="https://news.ycombinator.com/user?id=empath75">empath75</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1538067710"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    593 points
+                                    600 points
                                 </span>
                             </td>
                         </tr>
@@ -578,7 +578,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1538113248" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1538113839" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
